@@ -10,6 +10,7 @@ Revision history for Net-Silverpeak-Orchestrator
     - add update_templates_of_templategroup method
     - add delete_templategroup method
     - add list_addressgroup_names method
+    - add list_addressgroups method
 
 0.001002  2021-02-19 07:35:30+01:00 Europe/Vienna
     - fix Data::Dumper::Concise usage in t/api.t
